--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Show Section by ID</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+   
 </head>
+
+
 <body>
-    
+
+
+    <div class="mainContainer" >
+        <div class="innerContainer">
+            <div class="sectionInner">
+                <h2>Tourism </h2>
+                <button>Explore</button>
+            </div>
+
+        </div>
+
+    </div>
+
+
+
+
+    <script src="script.js"></script>
+
 </body>
+
 </html>
